# word4num

./: LICENSE  README.md  pyproject.toml
examples/: 4WordsGeo.py  IPv4toWords.py  IntPhoneWords.py  LocalPhoneWords.py  PostcodeWords.py
src/word4num/: __init__.py  w4n_converter.py
src/word4num/dicts/: 10_en_words.json  11_en_words.json  12_en_words.json  13_en_words.json  14_en_words.json  15_en_words.json  16_en_words.json  17_en_words.json  18_en_words.json  19_en_words.json  21_en_words.json  22_en_words.json  3_en_words.json  4_en_words.json  5_en_words.json  6_en_words.json  7_en_words.json  8_en_words.json  9_en_words.json  __init__.py  all_en_words.json  dicts.py
src/word4num/letters/: __init__.py  letters.py
